app02/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app02-svc
  namespace: production
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: app02
