app02/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: api
  namespace: production
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - app.easydevops.com
