app02/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app02-vs
  namespace: production
spec:
  hosts:
    - app.easydevops.com
  gateways:
    - api
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app02-svc.production.svc.cluster.local
        subset: v1
      weight: 0
    - destination:
        host: app02-svc.production.svc.cluster.local
        subset: v2
      weight: 100
